--- a/.github/workflows/install_test.yml
+++ b/.github/workflows/install_test.yml
@@ -61,7 +61,7 @@ jobs:
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/jfowkes/pycutest/master/.install_cutest.sh)"
         cd $SIFDECODE/src ; make -f $SIFDECODE/makefiles/$MYARCH test # test the SIFDecode library
         cd $CUTEST/src ; make -f $CUTEST/makefiles/$MYARCH test       # test the CUTEst library
-        pip install pycutest==1.7.2
+        pip install pycutest
 
       # Run the package tests and generate the coverage report
     - name: Test with pytest
