Changes to use the latest sphinx_collections fork by anugrahjo. Previous fork with an older version is not compatible with newest setuptools (import of deprecated pkg_resources) and was causing failure in the RTD doc builds.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ docs = [
     "sphinx-autoapi==2.1.0",   # Defining exact versions to ensure packages don't break
     "astroid==2.15.5",
     "numpydoc==1.5.0",
-    "sphinxcontrib-collections @ git+https://github.com/anugrahjo/sphinx-collections.git",
+    "sphinx_collections @ git+https://github.com/anugrahjo/sphinx-collections.git",
     "sphinxcontrib-bibtex==2.5.0"
 ]
 test = [
